--- a/index.html
+++ b/index.html
@@ -10,6 +10,6 @@
     <h1>Go away!!!</h1>
     <p>This site is not really ready, and i did not tell anyone about it so how are you here? Just go here instead<a
     
-        href="raspberryobsessed.net"> raspberryobsessed.net</a></p>
+        href="https://raspberryobsessed.net"> raspberryobsessed.net</a></p>
 </body>
 </html>
