--- a/index.html
+++ b/index.html
@@ -1,15 +1,37 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
+<html lang="en" dir="ltr">
+    <head>
+        <!-- Google tag (gtag.js) -->
+        <script async src="https://www.googletagmanager.com/gtag/js?id=G-RZ3PL9GCM5"></script>
+        <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+
+        gtag('config', 'G-RZ3PL9GCM5');
+        </script>
+    <link rel="stylesheet" href="style.css">
+
+    <link rel="shortcut icon" type="image/png" href="images/favicon.ico">
+    <title>Raspberry Obsessed</title>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    <h1>Go away!!!</h1>
-    <p>This site is not really ready, and i did not tell anyone about it so how are you here? Just go here instead<a
-    
-        href="https://raspberryobsessed.net"> raspberryobsessed.net</a></p>
-</body>
+    </head>
+    <body>
+        <center>
+            <br>
+            <div class="headerText unselectable">
+                Raspberry Obsessed
+            </div>
+            <br>
+            <hr>
+            <br>
+            
+
+            <br>
+            <br>
+
+            <h1>btw this page is not really complete cause we are moving over to this page instead of raspberryobsessed.net</h1>
+        </center>
+    </body>
 </html>
