--- a/coming-soon/index.html
+++ b/coming-soon/index.html
@@ -11,14 +11,14 @@
 <body>
     <header>
         <nav class="navbar">
+            <!--navbar loader script should add it here-->
+            <!--⬇️navbar loader⬇️(yes im putting emojis in the code for fun)-->
+            <script src="/navbar/navbar-loader.js"></script>
         </nav>
     </header>
 
     <section class="hero">
         <h1>Page Comming soon</h1>
     </section>
-
-    <!--navbar loader-->
-    <script src="/navbar/navbar-loader.js"></script>
 </body>
 </html>
