--- a/index.html
+++ b/index.html
@@ -11,7 +11,9 @@
 <body>
     <header>
         <nav class="navbar">
-            <!--navbar loader script will add it-->
+            <!--navbar loader script should add it here-->
+            <!--⬇️navbar loader⬇️(yes im putting emojis in the code for fun)-->
+            <script src="/navbar/navbar-loader.js"></script>
         </nav>
     </header>
 
@@ -32,8 +34,5 @@
     </section>
 
     <script src="script.js"></script>
-    
-    <!--navbar loader-->
-    <script src="/navbar/navbar-loader.js"></script>
 </body>
 </html>
