--- a/coming-soon/index.html
+++ b/coming-soon/index.html
@@ -11,8 +11,7 @@
 <body>
     <header>
         <nav class="navbar">
-            <!--navbar loader script should add it here-->
-            <!--⬇️navbar loader⬇️(yes im putting emojis in the code for fun)-->
+            <!--navbar loader script should add the navbar here-->
             <script src="/navbar/navbar-loader.js"></script>
         </nav>
     </header>
