--- a/videos/index.html
+++ b/videos/index.html
@@ -17,18 +17,24 @@
     </header>
 
     <section class="hero">
-        <h1>Welcome to the Raspberry Obsessed Website</h1>
-        <p>I'm not sure what else to say...</p>
-        <a href="https://www.youtube.com/@RaspberryObsessed?sub_confirmation=1" target="_blank" class="btn unselectable">Subscribe</a>
+        <h1>Featured Videos</h1>
     </section>
 
     <section class="video-gallery">
-        <h2>Featured Videos</h2>
         <div class="video-card">
             <iframe width="560" height="315" src="https://www.youtube.com/embed/7Bpa0-_f_xk" frameborder="0" allowfullscreen></iframe>
         </div>
         <div class="video-card">
             <iframe width="560" height="315" src="https://www.youtube.com/embed/ruoRVTBFgaQ" frameborder="0" allowfullscreen></iframe>
+        </div>
+        <div class="video-card">
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/R_a2s-_X3LA" frameborder="0" allowfullscreen></iframe>
+        </div>
+        <div class="video-card">
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/-34tzmTfYMI" frameborder="0" allowfullscreen></iframe>
+        </div>
+        <div class="video-card">
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/bKCDbqwg36Y" frameborder="0" allowfullscreen></iframe>
         </div>
     </section>
 </body>
