--- a/about/index.html
+++ b/about/index.html
@@ -21,7 +21,7 @@
         <br>
         <p>I made this website for a YouTube channel I previosly had, however I thought the channel was kinda 'cringe' 
             so I ended up deleting it.</p>
-        <p>Recently I wanted to start a new YouTube channel, but sence I already owned this site I named the new 
+        <p>Recently I wanted to start a new YouTube channel, but since I already owned this site I named the new 
         YouTube channel the same name.</p>
         <p>This site is really just to show new videos and plans for upcoming projects, it's also mainly for my custom 
            email address.</p>
