--- a/404.html
+++ b/404.html
@@ -14,8 +14,8 @@
     
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="styles.css">
-    <title>Page Coming soon - Raspberry Obsessed</title>
+    <link rel="stylesheet" href="/404/styles.css">
+    <title>404 - Raspberry Obsessed</title>
     
     <link rel="icon" type="image/x-icon" href="/images/favicon.ico">
 </head>
@@ -28,7 +28,23 @@
     </header>
 
     <section class="hero">
-        <h1>Page Comming soon</h1>
+        <h1>404</h1>
+        <p>The requested page could not be found.</p>
+        <a id="backBtn" class="link unselectable">Go back</a>
     </section>
+
+    <script>
+        document.getElementById('backBtn').addEventListener('click', goBack)
+
+        function goBack() {
+            if (document.referrer) {
+                // If there is a previous page in the browser history, go back
+                window.location.href = "javascript:history.go(-1)";
+            } else {
+                // If there is no previous page, go to the home page
+                window.location.href = "/";
+            }
+        } 
+    </script>
 </body>
 </html>
