--- a/about/index.html
+++ b/about/index.html
@@ -15,7 +15,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
-    <title>Raspberry Obsessed</title>
+    <title>About - Raspberry Obsessed</title>
     
     <link rel="icon" type="image/x-icon" href="/images/favicon.ico">
 </head>
