--- a/videos/index.html
+++ b/videos/index.html
@@ -33,13 +33,13 @@
 
     <section class="video-gallery">
         <div class="video-card">
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/mSsPyANtEmI" frameborder="0" allowfullscreen></iframe>
+        </div>
+        <div class="video-card">
             <iframe width="560" height="315" src="https://www.youtube.com/embed/7Bpa0-_f_xk" frameborder="0" allowfullscreen></iframe>
         </div>
         <div class="video-card">
             <iframe width="560" height="315" src="https://www.youtube.com/embed/ruoRVTBFgaQ" frameborder="0" allowfullscreen></iframe>
-        </div>
-        <div class="video-card">
-            <iframe width="560" height="315" src="https://www.youtube.com/embed/R_a2s-_X3LA" frameborder="0" allowfullscreen></iframe>
         </div>
         <div class="video-card">
             <iframe width="560" height="315" src="https://www.youtube.com/embed/-34tzmTfYMI" frameborder="0" allowfullscreen></iframe>
