--- a/index.html
+++ b/index.html
@@ -36,10 +36,10 @@
     <section class="video-gallery">
         <h2>Featured Videos</h2>
         <div class="video-card">
-            <iframe width="560" height="315" src="https://www.youtube.com/embed/7Bpa0-_f_xk" frameborder="0" allowfullscreen></iframe>
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/mSsPyANtEmI" frameborder="0" allowfullscreen></iframe>
         </div>
         <div class="video-card">
-            <iframe width="560" height="315" src="https://www.youtube.com/embed/ruoRVTBFgaQ" frameborder="0" allowfullscreen></iframe>
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/7Bpa0-_f_xk" frameborder="0" allowfullscreen></iframe>
         </div>
     </section>
 </body>
