--- a/videos/index.html
+++ b/videos/index.html
@@ -33,6 +33,9 @@
 
     <section class="video-gallery">
         <div class="video-card">
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/KFAsQQhcnVc" frameborder="0" allowfullscreen></iframe>
+        </div>
+        <div class="video-card">
             <iframe width="560" height="315" src="https://www.youtube.com/embed/mSsPyANtEmI" frameborder="0" allowfullscreen></iframe>
         </div>
         <div class="video-card">
@@ -40,9 +43,6 @@
         </div>
         <div class="video-card">
             <iframe width="560" height="315" src="https://www.youtube.com/embed/ruoRVTBFgaQ" frameborder="0" allowfullscreen></iframe>
-        </div>
-        <div class="video-card">
-            <iframe width="560" height="315" src="https://www.youtube.com/embed/-34tzmTfYMI" frameborder="0" allowfullscreen></iframe>
         </div>
         <div class="video-card">
             <iframe width="560" height="315" src="https://www.youtube.com/embed/bKCDbqwg36Y" frameborder="0" allowfullscreen></iframe>
