--- a/about/index.html
+++ b/about/index.html
@@ -30,13 +30,9 @@
     <section class="hero">
         <h1>About this site</h1>
         <br>
-        <p>I made this website for a YouTube channel I previosly had, however I thought the channel was kinda 'cringe' 
-            so I ended up deleting it.</p>
-        <p>Recently I wanted to start a new YouTube channel, but since I already owned this site I named the new 
-        YouTube channel the same name.</p>
-        <p>This site is really just to show new videos and plans for upcoming projects, it's also mainly for my custom 
+        <p>I made this website for my YouTube channel but I don't really know what else to put on here right now so there is not much.</p>
+        <p>This site is really just to show new videos, it's also mainly for my custom 
            email address.</p>
-        <p>Thanks for being here, and stay tuned for more updates!</p>
     </section>
 </body>
 </html>
