Add loading bar

--- a/about/index.html
+++ b/about/index.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-
     <!-- Google tag (gtag.js) -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-85RGNK5H1V"></script>
     <script>
@@ -20,6 +19,7 @@
     <link rel="icon" type="image/x-icon" href="/images/favicon.ico">
 </head>
 <body>
+    <script src="/resources/loading-bar/script.js"></script>
     <header>
         <nav class="navbar">
             <!--navbar loader script should add the navbar here-->
