--- a/404.html
+++ b/404.html
@@ -20,10 +20,11 @@
     <link rel="icon" type="image/x-icon" href="/images/favicon.ico">
 </head>
 <body>
+    <script src="/resources/loading-bar/script.js"></script>
     <header>
         <nav class="navbar">
             <!--navbar loader script should add the navbar here-->
-            <script src="/navbar/navbar-loader.js"></script>
+            <script src="/resources/navbar/navbar-loader.js"></script>
         </nav>
     </header>
 
