--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <header>
         <nav class="navbar">
             <!--navbar loader script should add the navbar here-->
-            <script src="/navbar/navbar-loader.js"></script>
+            <script src="/resources/navbar/navbar-loader.js"></script>
         </nav>
     </header>
 
